# 1024-multi-deep-research-agent-oracle

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  setup-storacha.sh  start-oracle.sh
.github/workflows/: ci.yml  docker.yml  release.yml
.ipfs_mock/: Qm039b455f0cc37fe4867ce0a1e7735b0a9079da1b8f78.json  Qm0f74abbdf47ddeda61a3bad6bc108bd911f8d394d1a9.json  Qm0fe481ac5633ab1b85e67ecd099e338d8ce328a10752.json  Qm267756dbbf9b89dd78118a141bd4c50407f6d40fd254.json  Qm2b8330fe57ba50cb9c195f9f7b3840a0f23cc73f442d.json  Qm37aa05a671f9f1cc6f2379d8fcc6a3ae8a4cfb9597a0.json  Qm50aa6e5671560dbe4b538e7b5e5dcf85c83d10f5c2db.json  Qm58a02eb42022b68fb9aabc2adb4378650966736c69de.json  Qm5bc2afbe96194f5c6fd231dab6fd79326bd44fdeaca9.json  Qm634d8556a3b44d4a4d89a9fdd3dba60c9a38ce72021a.json  Qm73fa94c61697ea4e10d2beebad4b99c4e6f30ae770a1.json  Qm7616a3fe74363e6e8280fa3e350e0e05bb96502e13ad.json  Qm792ad038018240bf2c211e2608d4e7db1d7a66aff935.json  Qm88df1edf2335699258d413666ff2e54ca203dcfb097c.json  Qm8a808d9a2a4c2f18a97c655bd7d20df21022d6af71f3.json  Qm8f104381edc263b8a8d222f06872cea1d891b12f43a6.json  Qm8fc17dbfe7c0b0302d9004d4f3b8ab3fc63a3068f7ce.json  Qm9a96a2d19f20d49f8e80b67cb3d444cd1b5d0a85619e.json  Qma2c086d32dd53c597daddf4807ed97868c901519c8e3.json  Qma62bf023ca30bde201cbfce15a6dd2b5aaff30033344.json  Qma7a7b8936cb24d64075d3582ec0faab1be473cc44d14.json  Qmb9a1f7329d2e1e8a8820ee82e79fb98220e4a0be7f72.json  Qmbc0569e7c57a2688c920f175b5f8c4423de2bdb25a48.json  Qmca4bc8d5d0f0f23829568b7b2cfc30d6479372202e5c.json  Qmcae3eb0e3647df618dca51b42b214a14216c9753d578.json  Qmcd5bb033cac540a4a29a70254545dbe6b5424369528f.json  Qmd11ffa0b2c77d7b5bf4194f4e733e5163b6f8bb927be.json  Qme2eb415cd8e3c549cb90a3c50eadd70d070ea4b0e2af.json
docs/: ARCHITECTURE.md  CONSENSUS-ALGORITHM.md  GEMINI-API-GUIDE.md  INTEGRATION-GUIDE.md
examples/: api_client.py  basic_usage.py
oracle/: __init__.py  core.py  models.py
oracle/agents/: __init__.py  base.py  gemini.py  strategies.py
oracle/api/: __init__.py  server.py
oracle/cli/: __init__.py  main.py
oracle/consensus/: __init__.py  engine.py  multi_outcome_engine.py  strict_engine.py
oracle/research/: __init__.py  reasoning_chain.py  thinking_recorder.py  website_tracker.py
oracle/storage/: __init__.py  builder.py  canonical.py  ipfs.py
oracle/tools/: __init__.py  base.py  crypto_price.py
tests/: __init__.py  conftest.py  test_agent_progress.py  test_consensus.py
